tests/rascal/negative/name_errors/L3/7_no-proc.ob
MODULE Bla;

VAR
  f: INTEGER;

BEGIN
  f()
END Bla.